--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,20 +2,20 @@ version: 2.1
 jobs:
 build: working_directory: ~/repo
 docker:
-- image: circleci/node:10.16.3
+image: circleci/node:10.16.3
 steps:
-- checkout
-- run:
+checkout
+run:
 name:Update NPM
 command: "sudo npm install -g npm@5"
-- restore_cache:
+restore_cache:
 key: dependency-cache-{{ checksum "package-lock.json"}}
-- run: name: Install Dependencies
+run: name: Install Dependencies
 command: npm install
-- save_cache:
+save_cache:
 key: dependency-cache-{{ checksum "package-lock.json" }}
 paths:
-- ./node_modules
-- run:
+./node_modules
+run:
 name: Run tests
 command: npm run test
